# book-recommender-backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: config.py  load_books_from_csv.py  main.py  test.py
scripts/: create_books_table.sql
